# xlsform-converter

./: .travis.yml  LICENSE  README.md  pyproject.toml  runtests.sh  setup.py
.github/workflows/: test.yml
tests/: test_survey.py
tests/files/: expected_form.html  expected_models.py  input_types.html  input_types.py  input_types.xls  nestedfk.csv  repeat.csv  repeat.html  repeat.py  select.csv  select.html  select.py
tests/files/input_types/: admin.py  detail.html  edit.html  list.html  models.py  popup.html  rest.py  serializers.py  wizard.py
tests/files/nestedfk/: admin.py  detail.html  edit.html  list.html  models.py  popup.html  rest.py  serializers.py  wizard.py
tests/files/repeat/: admin.py  detail.html  edit.html  list.html  models.py  popup.html  rest.py  serializers.py  wizard.py
tests/files/select/: admin.py  detail.html  edit.html  list.html  models.py  popup.html  rest.py  serializers.py  wizard.py
xlsconv/: __init__.py  ast.py  django.py  html.py  parser.py  renderer.py
xlsconv/templates/: detail.html  edit.html  form.html  list.html  models.py  models.py-tpl  popup.html  rest.py-tpl  serializers.py-tpl
xlsconv/templates/fields/: foreignkey.html  geo.html  html_field.html  input.html  model_field.py-tpl  note.html  photo.html  radio.html  select.html  textarea.html
